Fixed adding new price to product in ProductService, Clean code in PriceEntity, HouseholdBudgetApplication, CategoryService